# src/swagger.json
@@ -70,6 +70,63 @@
                     }
                 }
             }
-        }
+        },
+        "/categories/import": {
+            "post": {
+              "tags": ["Category"],
+              "summary": "Upload a new category",
+              "description": "Upload a new category",
+              "security": [
+                { "bearerAuth": []}
+               ],
+              "requestBody": {
+                "content": {
+                  "multipart/form-data": {
+                    "schema": {
+                      "type": "object",
+                      "properties": {
+                        "file": {
+                          "type": "string",
+                          "format": "binary"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "responses": {
+                "201": {
+                  "description": "Created"
+                }
+              }
+            }
+          },
+          "/specifications": {
+            "post": {
+              "tags": ["Specifications"],
+              "summary": "Create a specification",
+              "description": "Create a new specification",
+              "security": [
+                { "bearerAuth": []}
+               ],
+              "requestBody": {
+                "content": {
+                  "application/json": {
+                    "schema": {
+                      "$ref": "#/definitions/Specification"
+                    }
+                  }
+                }
+              },
+              "responses": {
+                "201": {
+                  "description": "Created"
+                },
+                "500": {
+                  "description": "Specification already exists!"
+                }
+              }
+            }
+          }
     }
 }
